# careercompassAPI

./: .gitignore  Dockerfile  Jenkinsfile  README.md  appspec.yml  docker-compose.yaml  pyproject.toml
configs/: python-app.service
scripts/: after_install.sh  before_install.sh  docker_build.sh  docker_save.sh  stop_server.sh
src/careercompass/: alembic.ini  auth.py  crud.py  database.py  dependency.py  main.py  models.py  schemas.py  settings.py
src/careercompass/alembic/: env.py
src/careercompass/alembic/versions/: 18b4f495e89f_.py  e030a79e6642_create_init_database.py
src/careercompass/auth/: dependencies.py  hash.py  helpers.py  router.py  schemas.py
src/careercompass/oauth/: dependencies.py  route.py  schemas.py
src/careercompass/projects/: crud.py  models.py  router.py  schemas.py
src/careercompass/tasks/: crud.py  models.py  router.py  schemas.py
src/careercompass/user/: crud.py  models.py  router.py  schemas.py
